<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rodrigo.recepcioncel.crear_usuarios"
    android:background="@drawable/fondolayout">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Crear Nuevo Usuario"
            android:layout_marginBottom="100px"
            android:textColor="#FFF"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Mail"
            android:textColor="#FFF"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:textColor="#FFF"
            android:id="@+id/editText4"
            android:layout_gravity="center_horizontal"
            android:text="@string/admin_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Contraseña"
            android:textColor="#FFF"
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textColor="#FFF"
            android:id="@+id/editText5"
            android:layout_gravity="center_horizontal"
            android:text="@string/admin_contrasenia" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Cliente Id"
            android:textColor="#FFF"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText6"
            android:textColor="#FFF"
            android:layout_gravity="center_horizontal"
            android:text="@string/admin_clienteid" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Usuario Id"
            android:textColor="#FFF"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText7"
            android:textColor="#FFF"
            android:layout_gravity="center_horizontal"
            android:text="@string/admin_usuariodi" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_crear_usr"
            android:layout_marginTop="80px"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
