<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rodrigo.recepcioncel.usuario_logueado"
    android:background="@drawable/fondolayout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Bienvenido Pirulo"
            android:id="@+id/textView9"
            android:textColor="#FFF"
            android:layout_marginBottom="100px"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:text="@string/usr_log_eventos"
            android:layout_marginBottom="50px"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usr_log_sync_eventos"
            android:layout_marginBottom="50px"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:text="@string/usr_log_salir"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
