<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:maxHeight="150px"
    tools:context="com.example.rodrigo.recepcioncel.MainActivity"
    android:background="@drawable/fondorecepcion">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="82dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Usuario"
            android:textSize="70px"
            android:textColor="#FFF"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:textSize="60px"
            android:textColor="#FFF"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_usuario"
            android:autoText="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Contraseña"
            android:textSize="70px"
            android:textColor="#FFF"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText1"
            android:textSize="60px"
            android:textColor="#FFF"
            android:text="@string/main_contrasenia" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_log"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>
